# updata

./: .gitignore  ALL_CHANGES.md  BUILD_FIX.md  BUTTON_FIX.md  BUTTON_STYLE_FIX_FINAL.md  CHANGES_SUMMARY.md  CMakeLists.txt  COMPLETE_GUIDE.md  CONSOLE_FIX.md  CROSS_COMPILE_GUIDE.md  DEBUG_SSL_ISSUE.md  EMBEDDED_RESOURCES.md  FINAL_SUMMARY.md  HTTPS_FIX_SUMMARY.md  ICON_SETUP.md  MainWindow.cpp  MainWindow.h  NEXT_STEPS.md  OPENSSL_MANUAL_FIX.md  PACKAGING.md  QT5_BUILD_GUIDE.md  QT_SSL_PLUGIN_INFO.md  QT_VERSION_CHANGE.md  QUICK_START_HTTPS_FIX.md  QUICK_TEST.md  README.md  RESOURCE_SUMMARY.md  SSL_TLS_FIX.md  SSL_TLS_GUIDE.md  UI_IMPROVEMENTS.md  YAML_FIX.md  app.rc  appveyor.yml  build_and_package.bat  build_cross_compile.sh  build_qt5_linux.sh  build_qt5_windows.bat  copy_openssl_dll.bat  main.cpp  package_single_exe.ps1  (+3 more)
.github/workflows/: build-windows.yml  check-syntax.yml
